feat: add animal picture identification
